syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.tanle.tland.user_serivce.grpc";
option java_outer_classname = "UserToAssetProto";


service UserToAssetService {
  rpc getUserById(UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
}
